# scigraph

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: column.ipynb  grouped.ipynb  xy.ipynb
scigraph/: __init__.py  _log.py  _options.py  _typing.py
scigraph/_utils/: args.py  descriptors.py
scigraph/analyses/: __init__.py  _agg.py  _curve_fit.py  _desc_stats.py  _doseresponse.py  _linearregression.py  _normalize.py  _row_stats.py  _stats.py  _ttest.py  _utils.py  abc.py  curve_fit.py  dosereponse.py
scigraph/analyses/curvefit/: __init__.py  _compare.py  _curvefit.py  (+2 more)
scigraph/config/: __init__.py  _config.py  _schema.py  default.toml
scigraph/datatables/: __init__.py  _column.py  _grouped.py  _xy.py  abc.py  xy.py
scigraph/graphing/: __init__.py  _boxplot.py  _graph.py  _group.py  _line.py  graph.py  group.py  line.py
scigraph/graphs/: __init__.py  _column.py  _formatters.py  _grouped.py  _options.py  _props.py  _xy.py  abc.py  xy.py
scigraph/layouts/: __init__.py  _caption.py  _grid.py  _layout.py
scigraph/styles/: __init__.py  _plot_properties.py  _styles.py  defaults.py
scigraph/tables/: __init__.py  _column.py  _contingency.py  _datatable.py  _grouped.py  _multiplevariables.py  _nested.py  _partsofwhole.py  _survival.py  _xy.py  column.py  contingency.py  datatable.py  grouped.py  multiplevariables.py  nested.py  partsofwhole.py  survival.py  tables.py  xy.py
scigraph/utils/: args.py  constants.py
tests/: test_graphs.py  test_profile_likelihood_ci.py  test_public_api.py  test_tables_and_analyses.py
tests/scripts/: line.py  slr.py
(+22 files in other folders)
